# Copyright (C) 2009-2015 Olof Hagsand and Benny Holmgren
#
# This file is part of CLICON.
#
# CLICON is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# CLICON is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with CLICON; see the file COPYING.  If not, see
# <http://www.gnu.org/licenses/>.

- fixed error in event-loop if timers are used: events before now caused hanging

R3.0.0 23 February 2015
=======================
This is a new major CLICON release. 
The changes from previous versions are too numerous to document.
Major recent additions are:
- Added python API
- YANG modeling support
- Updated commit callback API
- Asynchronous notifications
- db2txt